fix: spacing

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ footer {
     font-size: 40px;
 }
 
-img {
+.img {
     float: left;
     margin-right: 10%;
 }
